# Pixel-Visualiser

./: CMakeLists.txt  README.md
CMake/: Macros.cmake
Examples/: CMakeLists.txt
Examples/Colored Squares/src/: main.cpp
Examples/Test/: CMakeLists.txt
Examples/Test/src/: main.cpp
Pixel-Visualiser/: CMakeLists.txt
Pixel-Visualiser/headers/: buffer.hpp  keyboard.hpp  mouse.hpp  pixelVisualiser.hpp  test.hpp  vector2.hpp  vector3.hpp  window.hpp
Pixel-Visualiser/src/: buffer.cpp  keyboard.cpp  mouse.cpp  pixelVisualiser.cpp  test.cpp  window.cpp
